2018 video and link updates
2019.1: Added years of term to three pages; updated news article; updated links throughout

--- a/src/views/actors/affiliates/ACC.hbs
+++ b/src/views/actors/affiliates/ACC.hbs
@@ -7,7 +7,7 @@ name: actors
 <img src="/img/actors/american_continental_corp.png" alt="American Continental Corporation" class="float-left">
 <p><u>American Continental Corporation</u></p>
 
-<p>The American Continental Corporation (ACC) was an Ohio-chartered,
+<p>The American Continental Corporation was an Ohio-chartered,
 Phoenix, Arizona-based real estate company that was active in the
 1970s and 1980s. It was created in 1978 as a spin-off of American
 Financial Group, and was intended to build residential homes. Its
@@ -16,7 +16,7 @@ who moved to Phoenix to run it. By 1981, Keating had two thousand employees on
 his payroll, was one of the largest land developers in Arizona, benefiting from
 a boom in home building in Arizona.</p>
 
-<p>In February 1984, American Continental Corporation acquired the
+<p>In February 1984, ACC acquired the
 underperforming Lincoln Savings and Loan Association for $51 million.
 Much of American Continental's assets were in the form of Arizona real
 estate, junk bonds, and mortgage-backed securities. Lincoln S&L
@@ -25,10 +25,9 @@ arrangements, including loans to ACC itself. For most of 1987,
 American Continental was profitable, but by 1988, losses mounted due
 to financial troubles and other negative events at Lincoln. By 1989,
 Lincoln made up 90 percent of American Continental’s assets.
-On April 13th, 1989, American Continental Corporation filed for
-Chapter 11 bankruptcy. Lincoln’s loss of many investors’ life savings
-became one of the key events of the 1980s savings and loan crisis and
-the core of the Keating Five political scandal.</p>
+On April 13th, 1989, ACC filed for Chapter 11 bankruptcy. Lincoln’s loss of
+many investors’ life savings became one of the key events of the 1980s savings
+and loan crisis and the core of the Keating Five political scandal.</p>
 
 <p>See <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L</a>
 for more details of the 1987-1989 period for ACC.</p>
