--- a/src/views/actors/affiliates/Jack-Atchison.hbs
+++ b/src/views/actors/affiliates/Jack-Atchison.hbs
@@ -12,11 +12,11 @@ name: actors
     </div>
 
 
-<p><u>Arthur Young accountant and Lincoln employee</u></p>
+<p><u>Arthur Young Accountant and Lincoln Employee</u></p>
 
 <p>Jack Atchison was the managing partner of the Phoenix office at Arthur Young,
 one of (what was then) the "big eight" U.S. accounting firms. While working at
-Arthur Young, he conducted a number of <a href="/actors/affiliates/ACC">ACC’s</a>
+Arthur Young, he conducted a number of <a href="/actors/affiliates/ACC">American Continental Corporation's</a>
 external audits during the 1980s and penned the famous
 <a href="/files/exhibits/Lincoln/%233 Arthur Young Letter 03-17-87.pdf">Arthur Young letter</a>,
 which outlined the reasons for his belief that the <a href="/actors/supporting_cast/SF-Regulators">
