--- a/src/views/actors/supporting_cast/Danny-Wall.hbs
+++ b/src/views/actors/supporting_cast/Danny-Wall.hbs
@@ -5,17 +5,17 @@ name: actors
 <h2>Danny Wall</h2>
 
 <img src="/img/actors/Danny-Wall.png" alt="Danny Wall" class="float-left">
-<p><u>FHLBB Chairman</u></p>
+<p><u>Bank Board Chairman (1987-1989)</u></p>
 
-<p>Danny Wall was the <a href="/actors/supporting_cast/FHLBB">FHLBB</a> Chairman
+<p>Danny Wall was the <a href="/actors/supporting_cast/FHLBB">Federal Home Loan Bank Board</a> Chairman
 that succeeded <a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a> in mid-1987,
 after Gray had stepped down from his post. Some say Wall was more sympathetic to
 <a href="/actors/affiliates/Charles-Keating">Charles Keating</a>. Wall
 <a href="/files/evidence/48">dismissed</a> efforts for Congressional action on the
 burgeoning scandal. At the time, the House Banking Committee Chairman asked President
-Bush to dismiss him. Under his Chairmanship, the Bank Board did not follow the
+Bush to dismiss him. Under his chairmanship, the Bank Board did not follow the
 <a href="/actors/supporting_cast/SF-Regulators">San Francisco officials’</a>
-recommendation to seize <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln</a>.
+recommendation to seize <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L</a>.
 Mr. Wall said that there was insufficient proof to justify the action.</p>
 
 <br clear="all">
