--- a/src/views/actors/supporting_cast/FHLBB.hbs
+++ b/src/views/actors/supporting_cast/FHLBB.hbs
@@ -7,9 +7,9 @@ name: actors
 <img src="/img/actors/FHLBB.png" alt="Logo of Federal Home Loan Bank Board" class="float-left"><br />
 <p><u>Federal Home Loan Bank Board</u></p>
 
-<p>The FHLBB was an <a href="http://www.foreffectivegov.org/node/2593">independent regulatory agency</a> formed during
+<p>The Federal Home Loan Bank Board was an <a href="http://www.foreffectivegov.org/node/2593">independent regulatory agency</a> formed during
   the Great Depression in order to lower the cost of home ownership. Under the 1932 law, the Bank Board was charged both
-  with establishing regional FHLBs (like the one in San Francisco relevant to the Keating Five) as well as chartering and
+  with establishing regional <a href="/evidence">FHLBs</a> (like the one in San Francisco relevant to the Keating Five) as well as chartering and
   overseeing S&Ls. FHLBs were created to provide reliable capital to S&Ls and other types of community development financial
   institutions, the idea being their government-backed stability would lead to lower costs for would-be homeowners. Congress
   dissolved the FHLBB in 1990, reconstituting its oversight of the FHLBs and other roles into a new administrative structure
