--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -6,9 +6,9 @@ name: actors
 
 <div class="right-column">
     <h2>Exhibits</h2>
-    <ul><li><a href="/files/exhibits/Henkel/%231 Lincoln Defending Henkel 02-25-87.pdf">Exhibit #1 Lincoln Defending Henkel 02-25-87</a></li>
-<li><a href="/files/exhibits/Henkel/%232 _Not Public Info._ Henkel to Proxmire 01-16-87.pdf">Exhibit #2 "Not Public Info." Henkel to Proxmire 01-16-87</a></li>
-<li><a href="/files/exhibits/Henkel/%233 Henkel Grandfathering Proposal Summary.pdf">Exhibit #3 Henkel Grandfathering Proposal Summary</a></li>
+    <ul><li><a href="/files/exhibits/Henkel/%231 Lincoln Defending Henkel 02-25-87.pdf">Exhibit #1: Lincoln Defending Henkel 02-25-87</a></li>
+<li><a href="/files/exhibits/Henkel/%232 _Not Public Info._ Henkel to Proxmire 01-16-87.pdf">Exhibit #2: "Not Public Info." Henkel to Proxmire 01-16-87</a></li>
+<li><a href="/files/exhibits/Henkel/%233 Henkel Grandfathering Proposal Summary.pdf">Exhibit #3: Henkel Grandfathering Proposal Summary</a></li>
 </ul>
 </div>
 
@@ -16,13 +16,13 @@ name: actors
 <p><u>FHLBB Board Member</u></p>
 
 <p>The Reagan Administration appointed Henkel to the
-<a href="/actors/supporting_cast/FHLBB">FHLBB</a> in late 1986 after lobbying by
+<a href="/actors/supporting_cast/FHLBB">Federal Home Loan Bank Board</a> in late 1986 after lobbying by
 <a href="/actors/affiliates/Charles-Keating">Charles Keating</a>. Henkel was named
 through a recess appointment, meaning that he did not require Senate confirmation.
 He proposed new regulations in his first meeting on the FHLBB. Many saw
 these new rules, while technically applicable to all Federally-chartered
 S&Ls, as specifically targeted to benefit
-<a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln</a>. Henkel vigorously
+<a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L</a>. Henkel vigorously
 denies these allegations. He resigned from the FHLBB only five months
 later, shortly after it was revealed that he had several large loans from
 Lincoln, saying he needed to protect his family from the intense media
