--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -8,7 +8,7 @@ name: actors
 
         <h2>Video</h2>
     <ul>
-                <li><a href="/videos/70-Minutes">70 Minutes: A First Look into the Hearings</a></li>
+                <li><a href="/videos/70-Minutes">A First Look into the Hearings</a></li>
             </ul>
     </div>
 
@@ -25,7 +25,7 @@ FHLB-SF extended examination of <a href="/actors/affiliates/Lincoln-Savings-and-
 Lincoln S&L</a>. The four men were present at the April 9th meeting and contend that Lincoln was
 exaggerating the value of properties in which it had invested or on which it had made loans.</p><p>
 
-Black’s boss, FHLBB Chairman <a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a>, asked Black to
+Black’s boss, <a href="/actors/supporting_cast/FHLBB">Federal Home Loan Bank Board</a> Chairman <a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a>, asked Black to
 report back to him about the April 9th meeting. Black took the extensive notes that formed the basis
 for the infamous "<a href="http://keatingfive.org/files/exhibits/Gray/Black%20Transcript%2004-10-87.pdf">Black Transcript</a>."
 While many questioned exactly how Mr. Black was able to take such detailed notes,
