--- a/src/views/actors/supporting_cast/William-Proxmire.hbs
+++ b/src/views/actors/supporting_cast/William-Proxmire.hbs
@@ -8,7 +8,7 @@ name: actors
 <p><u>Chairman of the Senate Banking Committee; U.S. Senator (D-Wisconsin)</u></p>
 
 <p>Senator William Proxmire represented Wisconsin in the U.S. Senate from 1957 to 1989.
-During that time, he served as chairman of the Committee on Banking, Housing and Urban Affairs
+During that time, he served as Chairman of the Committee on Banking, Housing and Urban Affairs
 from 1975 to 1981 as well as from 1987 to 1989. Proxmire refused campaign contributions during
 his 31 years in the Senate. After his retirement in 1989, Proxmire stayed active as a syndicated
 columnist and broadcaster, commenting on the Keating Five and other scandals of the day. He was
