--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -20,7 +20,7 @@ contributions?</p>
 <p>“Understanding the Keating Five” provides a wealth of information about the
 S&L collapse and the stories of specific actors in the case. To start,
 it is recommended that the reader look first to the “Overall Story” and
-“70 Minutes: A First Look into the Hearings” to get a sense of sequencing and
+“A First Look into the Hearings” to get a sense of sequencing and
 tone. From there, the site provides individual background stories, timelines, and
 selected excerpts of testimony from the hearings (in both written and video form)
 for each of the senators and other important actors. The "Enduring Issues" and
