--- a/src/views/actors/supporting_cast/Bill-Seidman.hbs
+++ b/src/views/actors/supporting_cast/Bill-Seidman.hbs
@@ -6,11 +6,11 @@ name: actors
 
 <img src="/img/actors/Bill-Seidman.png" alt="Bill Seidman" class="float-left"><br />
 <p><u>FDIC Chairman</u></p>
-<p>Bill Seidman was the Chairman of the FDIC, the government agency
+<p>Bill Seidman was the Chairman of the <a href="/evidence">FDIC</a>, the government agency
 that insures bank accounts, from 1985 to 1991. During this time, he
 oversaw a period of great change: Rising interest rates, deregulation,
 changes in tax law, and bad real-estate loans that triggered thousands
 of bank and thrift failures. He worked with Congress on legislation in
 1989 that created the Resolution Trust Corporation, where he also
-served as Chairman, to help solve the crisis.</p>
+served as chairman, to help solve the crisis.</p>
 <br clear="all">
