Google search verification

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <meta name="google-site-verification" content="vqtvMUYMUFSG1EWlZUUhEEIy6_d4MoCoaz3dqMpnB9U" />
+    <meta name="google-site-verification" content="G_W3a9vZAUa93uymSU4UHJ_Nuq5hcAUzbH52a6ohiDo" />
 
     <link rel="stylesheet" href="/css/styles.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
