Update McCain error
2012-->2008; has since passed away

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -268,7 +268,7 @@ name: story
         senators, being formally reprimanded by the Ethics Committee during a formal session of the full Senate, with almost all 100 senators present. DeConcini
         and Riegle also continued to serve until their terms expired, neither seeking re-election in 1994. Glenn did choose to run for re-election in 1992,
         winning, and served until 1999. After that time, the only member of the Keating Five remaining in the Senate was John McCain. McCain eventually became the
-        Republican presidential nominee in 2012 and remains in the Senate to this day. During the early 2000s, several retrospective accounts of the controversy
+        Republican presidential nominee in 2008 and remained in the Senate until his death in 2018. During the early 2000s, several retrospective accounts of the controversy
         reiterated the contention that McCain was included in the investigation primarily so that there would be at least one Republican target.
     </p>
     <p>
