--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="G_W3a9vZAUa93uymSU4UHJ_Nuq5hcAUzbH52a6ohiDo" />
 
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://simile.mit.edu/timeline/api/timeline-api.js" type="text/javascript"></script>
     <script src="/files/timeline_examples.js" type="text/javascript"></script>
     <script src="/js/scripts.js"></script>
