Add timeline workarounds

--- a/src/views/timeline.hbs
+++ b/src/views/timeline.hbs
@@ -134,7 +134,7 @@ Disabled: hack to display TZ after toUTCString.
     ];
     bandInfos[1].syncWith = 0;
     bandInfos[1].highlight = true;
-    bandInfos[1].eventPainter.setLayout(bandInfos[0].eventPainter.getLayout());
+    //bandInfos[1].eventPainter.setLayout(bandInfos[0].eventPainter.getLayout());
 
     /*for (var i = 0; i < bandInfos.length; i++) {
         bandInfos[i].decorators = [
