--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://simile.mit.edu/timeline/api/timeline-api.js" type="text/javascript"></script>
+    <script>if (!jQuery && $) jQuery=$;</script>
     <script src="/files/timeline_examples.js" type="text/javascript"></script>
     <script src="/js/scripts.js"></script>
   </head>
